Updated HouseholdService and tests to use the security service